base-apps/chores-frontend/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chores-frontend
  namespace: chores-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chores-frontend
  template:
    metadata:
      labels:
        app: chores-frontend
    spec:
      imagePullSecrets:
      - name: ecr-registry
      imagePullPolicy: Always
      containers:
      - name: chores-frontend
        image: 852893458518.dkr.ecr.us-east-2.amazonaws.com/chores-frontend:test-1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
