base-apps/chores-frontend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chores-frontend-service
  namespace: chores-frontend
spec:
  selector:
    app: chores-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
